Er på linux. Har ryddet i filer og stier. Fjernet demo i Streamlit

--- a/fase1/api_testing.ipynb
+++ b/fase1/api_testing.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "# Konfigurasjon\n",
     "API_BASE = \"http://localhost:8000/api/v1\"\n",
-    "TEST_SOURCE = \"C:/temp/PHOTOS_SRC_TEST_MICRO\"\n",
+    "TEST_SOURCE = \"/mnt/c/temp/PHOTOS_SRC_TEST_MICRO\"\n",
     "\n",
     "print(\"🚀 ImaLink API Tester Ready!\")\n",
     "print(f\"API Base: {API_BASE}\")\n",
